testdata/baselines/reference/submodule/compiler/duplicateIdentifierRelatedSpans6.errors.txt
[96mfile2.ts[0m:[93m1[0m:[93m22[0m - [91merror[0m[90m TS6053: [0mFile 'file1' not found.

[7m1[0m /// <reference path="./file1" />
[7m [0m [91m                     ~~~~~~~[0m

[96mfile2.ts[0m:[93m3[0m:[93m16[0m - [91merror[0m[90m TS2664: [0mInvalid module name in augmentation, module 'someMod' cannot be found.

[7m3[0m declare module "someMod" {
[7m [0m [91m               ~~~~~~~~~[0m


==== file2.ts (2 errors) ====
    /// <reference path="./file1" />
                         ~~~~~~~
!!! error TS6053: File 'file1' not found.
    
    declare module "someMod" {
                   ~~~~~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'someMod' cannot be found.
        export interface TopLevel {
            duplicate1(): number;
            duplicate2(): number;
            duplicate3(): number;
        }
    }
    export {};
    
==== file1.ts (0 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            duplicate2: () => string;
            duplicate3: () => string;
        }
    }
Found 2 errors in the same file, starting at: file2.ts[90m:1[0m

